--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{'weather.date'|translate}}
-  </h1>
-   <app-weather-station></app-weather-station>
-</div>
+<app-dashboard></app-dashboard>
+ 
