--- a/src/app/real-time/weather-station/weather-station.component.html
+++ b/src/app/real-time/weather-station/weather-station.component.html
@@ -1,8 +1,8 @@
 <div class="content">
-    <div class="box"> :{{newly.date}}</div>
-    <div class="box"> :{{newly.currentTemp}} </div>
-    <div class="box"> :{{newly.humidity}}</div>
-    <div class="box"> :{{newly.time}}</div>
-    <div class="box"> :{{newly.lowTemp}} </div>
-    <div class="box"> :{{newly.rainfall}}</div>
-  </div>
+  <div class="box">{{'weather.date'|translate}}:{{newly.date}}</div>
+  <div class="box">{{'weather.nowTemp'|translate}}:{{newly.currentTemp}} </div>
+  <div class="box">{{'weather.rainpassible'|translate}}:{{newly.humidity}}</div>
+  <div class="box">{{'weather.time'|translate}}:{{newly.time}}</div>
+  <div class="box">{{'weather.minTemp'|translate}}:{{newly.lowTemp}} </div>
+  <div class="box">{{'weather.rainfall'|translate}}:{{newly.rainfall}}</div>
+</div>
