--- a/src/app/announce/peach/peach.component.scss
+++ b/src/app/announce/peach/peach.component.scss
@@ -1,16 +1,16 @@
-.container {  
-    min-height: 400px;
-    background-image: linear-gradient( to bottom right, #D3D3D3 30%, #DCDCDC 100%);
-    background-repeat: no-repeat;
-    background-size: cover;
+.container {
+  height: 392px;
+  background-image: linear-gradient( to bottom right, #D3D3D3 30%, #DCDCDC 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
   
-  .content {
-    position: relative;
+.content {
+  position: relative;
     display: inline-block;
-    width: calc(100% - 8px);
-    height: 390px;
-    margin: 4px 4px 4px 4px;
+    width: calc(100% - 16px);
+    height: 376px;
+    margin: 8px;
     background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.9) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Fpeach%2Fpeach.jpg?alt=media&token=ac3272f5-a5e0-41c4-b8c4-58a3c5970942);    
     background-size: cover;
   }
