--- a/src/app/announce/long-stay/long-stay.component.scss
+++ b/src/app/announce/long-stay/long-stay.component.scss
@@ -1,5 +1,5 @@
 .container {    
-    min-height: 400px;
+    height: 392px;     
     background-image: linear-gradient( to bottom right, #D3D3D3 30%, #DCDCDC 100%);
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,9 +8,9 @@
   .content {
     position: relative;
     display: inline-block;
-    width: calc(100% - 8px);
-    height: 390px;
-    margin: 4px 4px 4px 4px;
+    width: calc(100% - 16px);
+    height: 376px;
+    margin: 8px;
     background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.9) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Flong-stay.jpg?alt=media&token=09ac55a1-5fc1-4b12-95c0-d348ce26973b);    
     background-size: cover;
   }
