--- a/src/app/announce/peach/peach.component.scss
+++ b/src/app/announce/peach/peach.component.scss
@@ -1,6 +1,6 @@
 .container {
   height: 392px;
-  background-image: linear-gradient( to bottom right, #D3D3D3 30%, #DCDCDC 100%);
+  background-image: linear-gradient( to bottom right, #D3D3D3 30%,  #F0F0F0 100%);
   background-repeat: no-repeat;
   background-size: cover;
 }
