--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         <app-aside-left></app-aside-left>
     </mat-drawer>
     <mat-drawer-content>      
-      <app-main></app-main>  
+      <router-outlet></router-outlet>
     </mat-drawer-content>
   </mat-drawer-container>
 </main>
