--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@ngx-gallery/core/styles/gallery.css';
 
 html, body{
     /* font-family:'cwTeXKai', sans-serif; */
