--- a/src/app/dashboard/main/main.component.scss
+++ b/src/app/dashboard/main/main.component.scss
@@ -104,7 +104,7 @@
     margin: 8px;
     height: 140px;
   }
-  .traffic_guide{     
+  .departure{     
     background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.9) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftrafficinfo.jpg?alt=media&token=3d31d2aa-2abe-49f4-affa-5c93621e50f9);
     background-size: cover;
     background-repeat: no-repeat;
@@ -181,7 +181,7 @@
   .tollbooth {  
     height: 112px;    
   }
-  .traffic_guide{
+  .departure{
     height: 112px;  
   }  
   .tour-guide{    
@@ -233,7 +233,7 @@
   .tollbooth {  
     height: 80px;    
   }
-  .traffic_guide{
+  .departure{
     height: 80px; 
   }  
   .tour-guide{    
