--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -61,7 +61,7 @@
     </div>
     <div id="ecotourism-contain" class="content">
         <div class="show">
-            <!-- <app-ecotourism [place]="place"></app-ecotourism> -->
+            <app-ecotourism [place]="place"></app-ecotourism>  
         </div>
     </div>
     <div id="restaurant-contain" class="content ">
@@ -71,7 +71,7 @@
     </div>
     <div id="product-contain" class="content">
         <div class="show">
-            <!-- <app-farm [place]="place"></app-farm> -->
+             <app-product [place]="place"></app-product>  
         </div>
     </div>
 </div>
